FIX: change padding on section: artifical, coffins, covered, crosses, decoration, funeral portrait, funeral set, funeral vases, wreaths for mobile version

--- a/src/components/SectionArtificialWreath/SectionArtificialWreath.module.scss
+++ b/src/components/SectionArtificialWreath/SectionArtificialWreath.module.scss
@@ -5,7 +5,10 @@
 }
 
 .artificialWreathsContainer {
-    padding: 40px 20px 20px 20px;
+    padding: 20px;
+    @include mq(desk) {
+        padding: 40px 20px 20px 20px;
+    }
 }
 
 .artificialWreathsDescriptionContainer {
