--- a/src/components/SectionCoffins/SectionCoffins.module.scss
+++ b/src/components/SectionCoffins/SectionCoffins.module.scss
@@ -5,7 +5,11 @@
 }
 
 .coffinsContainer {
+    padding: 20px;
+    @include mq(desk) {
     padding: 40px 20px 20px 20px;
+    }
+
 }
 
 .coffinsDescriptionContainer {
