--- a/src/components/SectionCovered/SectionCovered.module.scss
+++ b/src/components/SectionCovered/SectionCovered.module.scss
@@ -5,7 +5,11 @@
 }
 
 .decorationsContainer {
-    padding: 40px 20px 20px 20px;
+    padding: 20px;
+
+    @include mq(desk) {
+        padding: 40px 20px 20px 20px;
+    }
 }
 
 .decorationsDescriptionContainer {
