--- a/src/components/SectionCrosses/SectionCrosses.module.scss
+++ b/src/components/SectionCrosses/SectionCrosses.module.scss
@@ -5,7 +5,11 @@
 }
 
 .crossesContainer {
-    padding: 40px 20px 20px 20px;
+    padding: 20px;
+    
+    @include mq(desk) {
+        padding: 40px 20px 20px 20px;
+    }
 }
 
 .crossesDescriptionContainer {
