--- a/src/components/SectionFuneralSet/SectionFuneralSet.module.scss
+++ b/src/components/SectionFuneralSet/SectionFuneralSet.module.scss
@@ -5,7 +5,11 @@
 }
 
 .funeralVasesContainer {
-    padding: 40px 20px 20px 20px;
+    padding: 20px;
+    
+    @include mq(desk) {
+        padding: 40px 20px 20px 20px;
+    }
 }
 
 .funeralVasesDescriptionContainer {
