--- a/src/components/SectionFuneralVases/SectionFuneralVases.module.scss
+++ b/src/components/SectionFuneralVases/SectionFuneralVases.module.scss
@@ -1,11 +1,16 @@
 @import '../../sass/utils/mixin';
 
 .funeralVases {
+    height: 100vh;
     padding-top: 70px;
 }
 
 .funeralVasesContainer {
-    padding: 40px 20px 20px 20px;
+    padding: 20px;
+    
+    @include mq(desk) {
+        padding: 40px 20px 20px 20px;
+    }
 }
 
 .funeralVasesDescriptionContainer {
